@@ -358,11 +358,11 @@ int BitAllocation::applyQPAdaptationSlice (const Slice* slice, const VVEncCfg* e
         pic->ctuQpaLambda[ctuRsAddr] = hpEner[1]; // temporary backup of CTU mean visual activity
         pic->ctuAdaptedQP[ctuRsAddr] = (int) pic->getOrigBuf (ctuArea).getAvg(); // and mean luma
 
-        if ((picOrig.buf == picPrv1.buf) && (encCfg->m_vvencMCTF.MCTF)) // replace temp. activity
+        if (picOrig.buf == picPrv1.buf) // replace temporal visual activity with min motion error
         {
-          hpEner[1] = 1.5 * pic->m_picShared->m_minNoiseLevels[pic->ctuAdaptedQP[ctuRsAddr] >> (bitDepth - 3)];
+          hpEner[1] = pic->m_picShared->m_minNoiseLevels[pic->ctuAdaptedQP[ctuRsAddr] >> (bitDepth - 3)] * (bitDepth == 10 ? 1.5 : 0.375);
 
-          if (hpEner[1] < 382.0) // level in first frame
+          if (hpEner[1] < 255.0 * (bitDepth == 10 ? 1.5 : 0.375)) // level in first frame
           {
             hpEner[comp] += hpEner[1] * double (ctuArea.width * ctuArea.height);
             pic->ctuQpaLambda[ctuRsAddr] += hpEner[1]; // add noise level to mean visual activity
